images are transfered into image folder

--- a/RoseDay.css
+++ b/RoseDay.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url('RoseDayBG.jpg');
+    background-image: url('/Images/RoseDayBG.jpg');
     background-size: cover; /* Cover the entire background */
     background-position: center; /* Center the background image */
     display: flex;
