--- a/ValentineHome.css
+++ b/ValentineHome.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url('/Images/ValentinehomeBG.png');
+    background-image: url('ValentinehomeBG.png');
     background-size: cover;
     background-position: center;
     display: flex;
