--- a/Yes_Page.css
+++ b/Yes_Page.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/Images/LoveBackgorund1.jpg');
+    background-image: url('LoveBackgorund1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
