--- a/ValentineHome.css
+++ b/ValentineHome.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     min-height: 100vh; /*Ensure full viewport height */
     font-family: Arial, sans-serif;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .container {
