--- a/RoseDay.css
+++ b/RoseDay.css
@@ -1,160 +1,129 @@
-:root {
-  --primary: #fff;
-  --bg-color: rgb(5, 53, 61);
-  --bg-envelope-color: #f5edd1;
-  --envelope-tab: #e2d09e;
-  --envelope-cover: #7ad3d3;
-  --shadow-color: rgba(0, 0, 0, 0.2);
-  --txt-color: #444;
-  --heart-color: rgb(255, 14, 107);
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-image: url('RoseDayBG.jpg');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  font-family: Arial, sans-serif;
-  color: var(--txt-color);
-}
-
-.container {
-  height: 100vh;
-  display: grid;
-  place-items: center;
-}
-
-.container>.envelope-wrapper {
-  background: var(--bg-envelope-color);
-  box-shadow: 0 0 40px var(--shadow-color);
-  width: 80%;
-  /* Adjust envelope size for responsiveness */
-  max-width: 400px;
-  /* Set maximum width for larger screens */
-  position: relative;
-}
-
-.envelope-wrapper>.envelope {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.envelope-wrapper>.envelope::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  z-index: 2;
-  border-top: 30vw solid var(--envelope-tab);
-  /* Adjust envelope tab size for responsiveness */
-  border-right: 35vw solid transparent;
-  border-left: 35vw solid transparent;
-  transform-origin: top;
-  transition: all 0.5s ease-in-out 0.7s;
-}
-
-.envelope-wrapper>.envelope::after {
-  content: "";
-  position: absolute;
-  z-index: 2;
-  width: 0px;
-  height: 0px;
-  border-top: 30vw solid transparent;
-  /* Adjust envelope cover size for responsiveness */
-  border-right: 35vw solid var(--envelope-cover);
-  border-bottom: 20vw solid var(--envelope-cover);
-  border-left: 35vw solid var(--envelope-cover);
-}
-
-.envelope>.letter {
-  position: absolute;
-  right: 10%;
-  bottom: 0;
-  width: 80%;
-  /* Adjust letter size for responsiveness */
-  height: 80%;
-  background: var(--primary);
-  text-align: center;
-  transition: all 1s ease-in-out;
-  box-shadow: 0 0 5px var(--shadow-color);
-  padding: 20px 10px;
-  overflow: hidden;
-  border-radius: 30px;
-}
-
-.envelope>.letter>.text {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: var(--txt-color);
-  text-align: left;
-  font-size: 1rem;
-  /* Adjust font size for responsiveness */
-  max-height: 100%;
-  overflow: auto;
-}
-
-.envelope>.letter>.text img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.heart {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 5%;
-  /* Adjust heart size for responsiveness */
-  height: 5%;
-  background: var(--heart-color);
-  z-index: 4;
-  transform: translate(-50%, -20%) rotate(45deg);
-  transition: transform 0.5s ease-in-out 1s;
-  box-shadow: 0 1px 6px var(--shadow-color);
-  cursor: pointer;
-}
-
-.heart:before,
-.heart:after {
-  content: "";
-  position: absolute;
-  width: 5%;
-  height: 5%;
-  background-color: var(--heart-color);
-  border-radius: 50%;
-}
-
-.heart:before {
-  top: -2.5%;
-}
-
-.heart:after {
-  right: 2.5%;
-}
-
-.flap>.envelope:before {
-  transform: rotateX(180deg);
-  z-index: 0;
-}
-
-.flap>.envelope>.letter {
-  bottom: 10%;
-  transform: scale(1.2);
-  /* Adjust letter scale for responsiveness */
-  transition-delay: 1s;
-}
-
-.flap>.heart {
-  transform: rotate(90deg);
-  transition-delay: 0.4s;
-}
-
-@media only screen and (max-width: 768px) {
-  .container>.envelope-wrapper {
-    width: 90%;
+:root{
+    --primary: #fff;
+    --bg-color: rgb(5, 53, 61);
+    --bg-envelope-color: #f5edd1;
+    --envelope-tab: #e2d09e;
+    --envelope-cover: #7ad3d3;
+    --shadow-color: rgba(0, 0, 0, 0.2);
+    --txt-color: #444;
+    --heart-color: rgb(255, 14, 107);
   }
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-image: url('RoseDayBG.jpg');
+    background-size: cover; /* Cover the entire background */
+    background-position: center; /* Center the background image */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
+  .container {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+  }
+  .container > .envelope-wrapper {
+    background: var(--bg-envelope-color);
+    box-shadow: 0 0 40px var(--shadow-color);
+  }
+  .envelope-wrapper > .envelope {
+    position: relative;
+    width: 300px;
+    height: 230px;
+    
+  }
+  .envelope-wrapper > .envelope::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    border-top: 130px solid var(--envelope-tab);
+    border-right: 150px solid transparent;
+    border-left: 150px solid transparent;
+    transform-origin: top;
+    transition: all 0.5s ease-in-out 0.7s;
+  }
+  .envelope-wrapper > .envelope::after {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    width: 0px;
+    height: 0px;
+    border-top: 130px solid transparent;
+    border-right: 150px solid var(--envelope-cover);
+    border-bottom: 100px solid var(--envelope-cover);
+    border-left: 150px solid var(--envelope-cover);
+    
+  }
+  .envelope > .letter {
+    position: absolute;
+    right: 20%;
+    bottom: 0;
+    width: 54%;
+    height: 80%; /* Set the height to contain the content */
+    background: var(--primary);
+    text-align: center;
+    transition: all 1s ease-in-out;
+    box-shadow: 0 0 5px var(--shadow-color);
+    padding: 20px 10px;
+    overflow: hidden; /* Hide overflow content */
+    border-radius: 30px;
+}
+
+.envelope > .letter > .text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--txt-color);
+    text-align: left;
+    font-size: 10px;
+    max-height: 100%; /* Ensure the text container respects the height */
+    overflow: auto; /* Add overflow to allow scrolling if needed */
+}
+
+.envelope > .letter > .text img {
+    max-width: 100%; /* Ensure the image doesn't exceed the container's width */
+    max-height: 100%; /* Ensure the image doesn't exceed the container's height */
+}
+  .heart {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    background: var(--heart-color);
+    z-index: 4;
+    transform: translate(-50%, -20%) rotate(45deg);
+    transition: transform 0.5s ease-in-out 1s;
+    box-shadow: 0 1px 6px var(--shadow-color);
+    cursor: pointer;
+  }
+  .heart:before, 
+  .heart:after {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: var(--heart-color);
+    border-radius: 50%;
+  }
+  .heart:before {
+    top: -7.5px;
+  }
+  .heart:after {
+    right: 7.5px;
+  }
+  .flap > .envelope:before {
+    transform: rotateX(180deg);
+    z-index: 0;
+  }
+  .flap > .envelope > .letter {
+    bottom: 100px;
+    transform: scale(1.5);
+    transition-delay: 1s;
+  }
+  .flap > .heart {
+    transform: rotate(90deg);
+    transition-delay: 0.4s;
+  }
