--- a/Yes_Page.css
+++ b/Yes_Page.css
@@ -18,6 +18,7 @@ body {
 .container {
     text-align: center;
     animation: fadeIn 1s ease-in-out;
+    background-color: #05000000;
     padding: 20px;
     /* Add a subtle box shadow for depth */
     max-width: 600px;
@@ -28,7 +29,9 @@ body {
 
 .question {
     font-size: 36px;
+    font-weight: 300px;
     margin-bottom: 20px;
+    color: #fc4747;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
